--- a/week4/webpageDemo/form-style.css
+++ b/week4/webpageDemo/form-style.css
@@ -5,7 +5,9 @@
 }
 
 body{
-    background-color: azure;
+    background: linear-gradient(rgba(0, 0, 0, 0.676),rgba(0, 0, 0, 0.685)),url('./assets/cat-4218424_640.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 nav{
@@ -34,10 +36,12 @@ ul li{
     list-style-type: none;
 }
 
-form{
-    border:2px solid red;
+#home form{
     width:400px;
+    background-color: rgba(205, 199, 192, 0.546);
+    border-radius: 20px;
     margin: 2em auto 2em auto;
+    padding: 30px 20px;
 
 }
 
@@ -49,7 +53,8 @@ form label{
    
     display: block;
     width:210px;
-    margin: auto;
+    margin: 5px auto 10px;
+
 }
 
 form input[type="text"], 
@@ -59,6 +64,7 @@ form input[type="number"]
     padding: 10px 20px;
     margin: auto;
     border-bottom: 2px solid black;
+    background-color: transparent;
 }
 
 
@@ -66,7 +72,32 @@ form input[type="submit"]{
     background-color: purple;
     padding: 10px 20px;
     margin: 2em auto 0;
-    
     color: white;
 }
 
+
+
+h1{
+    text-align: center;
+    color: white;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+
+#radio-button-container{
+    display: flex;
+    width:220px;
+    margin: 10px auto;
+}
+
+.radio-button-inner-container{
+    display: flex;
+    width:50%;
+    gap: 5px;
+
+}
+
+#selection_container select{
+    margin-left: 22%;
+    padding: 5px;
+}
